<resources>
    <string name="app_name">motivation Lockscreen</string>

    <string name="lockScreen_setting">Lock Screen Setting</string>


    <string name="TEST_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
<!--    <string name="TEST_fullscreen_video_ad_unit_id">ca-app-pub-3940256099942544/8691691433</string>-->
<!--    <string name="TEST_fullscreen_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <string name="TEST_admob_app_id"> ca-app-pub-3940256099942544~3347511713</string>
    <string name="TEST_ADMOB_FULLSCREEN_ID">ca-app-pub-3940256099942544/1033173712</string>

    <string name="REAL_admob_app_id"> ca-app-pub-6729344454320392~6582777262</string>
    <string name="REAL_banner_ad_unit_id">ca-app-pub-6729344454320392/4684206381</string>
    <string name="REAL_ADMOB_FULLSCREEN_ID">ca-app-pub-6729344454320392/1856239890</string>

    <string name="app_activation">App Activation</string>
    <string name="language_setting">Language</string>
    <string name="background_color">Background Color</string>
    <string name="text_color">Text Color</string>
    <string name="text_size">Text Size</string>
    <string name="show_source">Source Indication</string>
    <string name="daily_notification_title">Daily Quote Notification</string>
    <string name="background_type_title">Background Type</string>
    <string name="background_gradient_title">Gradient</string>
    <string name="background_photo_picker_title">Choose Photo</string>
    <string name="background_photo_not_selected">No photo selected</string>
    <string name="background_photo_selected">Photo selected</string>
    <string name="background_settings_title">Background Settings</string>
    <string name="text_settings_title">Text Settings</string>
    <string name="settings_dialog_close">Close</string>

    <string name="exit_confirm_message">Exit the app?</string>
    <string name="exit_confirm_positive">Exit</string>
    <string name="exit_confirm_negative">Cancel</string>

    <string name="update_force_title">Update Required</string>
    <string name="update_force_message">Please update to the latest version for a better experience.</string>
    <string name="update_recommended_title">New Version Available</string>
    <string name="update_recommended_message">A new version is available. Would you like to update?</string>
    <string name="update_go_to_store">Go to Store</string>
    <string name="update_later">Later</string>

    <string name="backgroundTypeSolid">Solid Color</string>
    <string name="backgroundTypeGradient">Gradient</string>
    <string name="backgroundTypePhoto">Photo</string>

    <string name="app_running_message">App is running</string>
    <string name="daily_notification_channel_name">Daily Quotes</string>

    <string name="app_widget_label">Quote Widget</string>
    <string name="app_widget_description">Shows a quote on your home screen. Tap it for a new one.</string>

    <string name="permission_denied_message">Permission denied</string>
    <string name="permission_set_message">Permission set</string>
    <string name="daily_notification_permission_denied">Notification permission denied</string>
    <string name="daily_notification_time_summary">Every day at %1$s</string>
    <string name="daily_notification_turn_off">Turn off</string>

    <string name="languageKorean">Korean</string>
    <string name="languageEnglish">English</string>
    <string name="languageFrench">French</string>

    <string name="colorWhite">White</string>
    <string name="colorGray">Gray</string>
    <string name="colorBlack">Black</string>
    <string name="colorRed">Red</string>
    <string name="colorCrimson">Crimson</string>
    <string name="colorSalmon">Salmon</string>
    <string name="colorBeige">Beige</string>
    <string name="colorOrange">Orange</string>
    <string name="colorBrown">Brown</string>
    <string name="colorWalnut">Walnut</string>
    <string name="colorBlue">Blue</string>
    <string name="colorMalibu">Malibu</string>
    <string name="colorGreen">Green</string>
    <string name="colorYellowGreen">Yellow Green</string>
    <string name="colorMint">Mint</string>
    <string name="colorYellow">Yellow</string>
    <string name="colorPink">Pink</string>
    <string name="colorViolet">Violet</string>
    <string name="colorMagenta">Magenta</string>
    <string name="colorPurple">Purple</string>

    <string name="textSizeSmall">S</string>
    <string name="textSizeMedium">M</string>
    <string name="textSizeLarge">L</string>
    <string name="textSizeXLarge">XL</string>
    <string name="textSizeXXLarge">XXL</string>


    <string-array name="languageCategory">
        <item>@string/languageEnglish</item>
        <item>@string/languageKorean</item>
        <item>@string/languageFrench</item>
    </string-array>

    <string-array name="colorCategory">
        <item>@string/colorWhite</item>
        <item>@string/colorGray</item>
        <item>@string/colorBlack</item>
        <item>@string/colorRed</item>
        <item>@string/colorCrimson</item>
        <item>@string/colorSalmon</item>
        <item>@string/colorBeige</item>
        <item>@string/colorOrange</item>
        <item>@string/colorBrown</item>
        <item>@string/colorWalnut</item>
        <item>@string/colorBlue</item>
        <item>@string/colorMalibu</item>
        <item>@string/colorGreen</item>
        <item>@string/colorYellowGreen</item>
        <item>@string/colorMint</item>
        <item>@string/colorYellow</item>
        <item>@string/colorPink</item>
        <item>@string/colorViolet</item>
        <item>@string/colorMagenta</item>
        <item>@string/colorPurple</item>
    </string-array>

    <string-array name="textColorCategory">
        <item>@string/colorBlack</item>
        <item>@string/colorWhite</item>
        <item>@string/colorGray</item>
        <item>@string/colorRed</item>
        <item>@string/colorCrimson</item>
        <item>@string/colorSalmon</item>
        <item>@string/colorBeige</item>
        <item>@string/colorOrange</item>
        <item>@string/colorBrown</item>
        <item>@string/colorWalnut</item>
        <item>@string/colorBlue</item>
        <item>@string/colorMalibu</item>
        <item>@string/colorGreen</item>
        <item>@string/colorYellowGreen</item>
        <item>@string/colorMint</item>
        <item>@string/colorYellow</item>
        <item>@string/colorPink</item>
        <item>@string/colorViolet</item>
        <item>@string/colorMagenta</item>
        <item>@string/colorPurple</item>
    </string-array>

    <string-array name="textSizeCategory">
        <item>@string/textSizeSmall</item>
        <item>@string/textSizeMedium</item>
        <item>@string/textSizeLarge</item>
        <item>@string/textSizeXLarge</item>
        <item>@string/textSizeXXLarge</item>
    </string-array>

    <string-array name="backgroundTypeCategory">
        <item>@string/backgroundTypeSolid</item>
        <item>@string/backgroundTypeGradient</item>
        <item>@string/backgroundTypePhoto</item>
    </string-array>


</resources>
