<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <PreferenceCategory-->
<!--        android:title="@string/lockScreen_setting"-->
<!--        android:layout="@layout/preference_category">-->

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="useLockScreen"
            android:title="@string/app_activation" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/languageCategory"
            android:entryValues="@array/languageCategory"
            android:key="languageCategory"
            android:title="@string/language_setting" />

        <com.odom.motivationlocker.ColorIndicatorPreference
            android:key="backgroundSettingsEntry"
            android:title="@string/background_settings_title" />

        <com.odom.motivationlocker.ColorIndicatorPreference
            android:key="textSettingsEntry"
            android:title="@string/text_settings_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="showSourcePref"
            android:title="@string/show_source" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="dailyNotificationEnabled"
            android:title="@string/daily_notification_title" />

<!--    </PreferenceCategory>-->

</PreferenceScreen>